fixed screenshot watermark overlapping some data

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1507,7 +1507,8 @@ key {
   .ssWatermark {
     font-size: 1.25rem;
     color: var(--sub-color);
-    position: absolute;
+    // position: absolute;
+    float: right;
     bottom: 0;
     right: 0;
   }
